--- a/minitarea2.ipynb
+++ b/minitarea2.ipynb
@@ -85,14 +85,14 @@
         "# Carga los datos a un ndarray\n",
         "\n",
         "\n",
-        "archivo = 'https://raw.githubusercontent.com/astrodatos/minitarea2/master/phot.dat'\n",
-        "datos = np.loadtxt(archivo)\n",
+        "archivo = 'https://raw.githubusercontent.com/astrodatos/minitarea2/master/phot.dat' #Selecciono el archivo.\n",
+        "datos = np.loadtxt(archivo) #Cargo el archivo.\n",
         "# Inspecciona su forma y tamaño\n",
-        "print(datos.shape)\n",
-        "print(len(datos))\n",
-        "print(datos.ndim)\n",
-        "print(datos.size)\n",
-        "print(datos.dtype)"
+        "print(datos.shape) #Reviso su forma.\n",
+        "print(len(datos)) #Reviso el largo del arreglo.\n",
+        "print(datos.ndim) #Reviso la dimensión de este.\n",
+        "print(datos.size) #Reviso el tamaño.\n",
+        "print(datos.dtype) #Reviso el tipo de los elementos del arreglo."
       ],
       "execution_count": 26,
       "outputs": [
@@ -111,6 +111,17 @@
     },
     {
       "metadata": {
+        "id": "h2FT15prJ0QK",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## Resumen parte 1\n",
+        "En esta parte de la tarea se cargo el archivo **phot.dat** cuyo contenido está descrito más arriba. Luego inspeccioné estos datos como averiguar su tamaño, etc."
+      ]
+    },
+    {
+      "metadata": {
         "id": "ZwcQn4us5HIG",
         "colab_type": "text"
       },
@@ -123,7 +134,7 @@
         "* Haz una figura con dos gráficos, uno al lado del otro, que contengan:\n",
         "\n",
         "    1. Un histograma con las distribuciones de las magnitudes en las bandas B y V\n",
-        "    2. Un histograma con la distribución de masas\n",
+        "    2. Un histograma con la distribución de distancias\n",
         "\n",
         "No olvides poner nombres a los ejes, titulos, leyendas, etc. Se creativo en el estilo de tu gráfico!"
       ]
