parte 4 (sin comentarios)

--- a/minitarea2.ipynb
+++ b/minitarea2.ipynb
@@ -149,7 +149,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 369
         },
-        "outputId": "fff7a2e2-9e1c-4415-c0bd-fa77d518ccd9"
+        "outputId": "5b8895e0-1926-4ba2-807b-8b1e3b6b27d2"
       },
       "cell_type": "code",
       "source": [
@@ -159,7 +159,7 @@
         "\n",
         "mB = datos[:,0]\n",
         "mV = datos[:,1]\n",
-        "dist = datos[:,6]\n",
+        "distc = datos[:,6]\n",
         "\n",
         "\n",
         "\n",
@@ -174,7 +174,7 @@
         "ax[0].set_ylabel('Numero de estrellas')\n",
         "ax[0].legend(loc = 'upper right')\n",
         "\n",
-        "ax[1].hist(dist, bins=[0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5,6],color = 'red')\n",
+        "ax[1].hist(distc, bins=[0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5,6],color = 'red')\n",
         "ax[1].set_title('Distribucion distancias')\n",
         "ax[1].set_xlabel('Distancias (pc)')\n",
         "ax[1].set_ylabel('numero de estrellas ')\n",
@@ -182,7 +182,7 @@
         "\n",
         "plt.tight_layout()\n"
       ],
-      "execution_count": 137,
+      "execution_count": 143,
       "outputs": [
         {
           "output_type": "display_data",
@@ -221,17 +221,17 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "b8a90d44-ecb8-4934-873f-f2ba8256103a"
+        "outputId": "86a4be52-6971-415a-910e-6772484f0fd4"
       },
       "cell_type": "code",
       "source": [
         "#Filtrar por distancia\n",
         "\n",
-        "datos_filtrados = datos.copy()[dist < 3.5 ] #Viendo el histograma, pdemos observar que la gran mayoría tiene distancias cercanas a 3. Por ende solo tomo esos datos (con distancias menores que 3 pc).\n",
+        "datos_filtrados = datos.copy()[distc < 3.5 ] #Viendo el histograma, pdemos observar que la gran mayoría tiene distancias cercanas a 3. Por ende solo tomo esos datos (con distancias menores que 3 pc).\n",
         "\n",
-        "print(\"El set original contenia \"+str(len(dist))+' estrellas, luego de filtrar quedaron '+str(len(datos_filtrados[:,0]))+' estrellas.')"
+        "print(\"El set original contenia \"+str(len(distc))+' estrellas, luego de filtrar quedaron '+str(len(datos_filtrados[:,0]))+' estrellas.')"
       ],
-      "execution_count": 142,
+      "execution_count": 144,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,19 +265,41 @@
       "metadata": {
         "id": "xU18RPuJ5HIV",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "f13a659d-3a42-4882-a797-a03584e79ae8"
       },
       "cell_type": "code",
       "source": [
         "#Funcion mag_abs(mag, dist)\n",
         "\n",
         "def mag_abs(mag_ap, dist):\n",
+        "    mag_abs = mag_ap - 5*np.log(dist)/np.log(10)+5\n",
         "    \n",
-        "    \n",
-        "    return "
+        "    return mag_abs\n",
+        "  \n",
+        "mag_ap = datos_filtrados[:,1] #Considere banda V.\n",
+        "dist = datos_filtrados[:,6]\n",
+        "mag_abs(mag_ap,dist)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 149,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([3.22672283, 4.81978464, 3.49851598, ..., 5.27367552, 4.5137258 ,\n",
+              "       3.93698627])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 149
+        }
+      ]
     },
     {
       "metadata": {
