parte 4 modificada -sin comentarios-

--- a/minitarea2.ipynb
+++ b/minitarea2.ipynb
@@ -269,22 +269,22 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "f13a659d-3a42-4882-a797-a03584e79ae8"
+        "outputId": "24bc330c-bf57-4fd4-d1d5-560359b33f0e"
       },
       "cell_type": "code",
       "source": [
         "#Funcion mag_abs(mag, dist)\n",
         "\n",
         "def mag_abs(mag_ap, dist):\n",
-        "    mag_abs = mag_ap - 5*np.log(dist)/np.log(10)+5\n",
+        "    return mag_ap - 5*np.log(dist)/np.log(10)+5\n",
         "    \n",
-        "    return mag_abs\n",
+        "    \n",
         "  \n",
         "mag_ap = datos_filtrados[:,1] #Considere banda V.\n",
         "dist = datos_filtrados[:,6]\n",
         "mag_abs(mag_ap,dist)"
       ],
-      "execution_count": 149,
+      "execution_count": 151,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -297,7 +297,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 149
+          "execution_count": 151
         }
       ]
     },
@@ -327,7 +327,7 @@
       "cell_type": "code",
       "source": [
         "#Crear arrays MV y color\n",
-        "\n",
+        "MV = \n",
         "\n",
         "#plot cmd\n"
       ],
