--- a/minitarea2.ipynb
+++ b/minitarea2.ipynb
@@ -157,28 +157,29 @@
         "\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "mB = datos[:,0]\n",
-        "mV = datos[:,1]\n",
-        "distc = datos[:,6]\n",
+        "mB = datos[:,0] #Creo un narray de la banda B\n",
+        "mV = datos[:,1] #narray de V\n",
+        "distc = datos[:,6] #narray de distancias\n",
         "\n",
         "\n",
         "\n",
         "\n",
         "%matplotlib inline\n",
         "\n",
-        "fig, ax = plt.subplots(figsize = (15,5), ncols = 2)\n",
-        "ax[0].hist(mV, bins=[0, 1, 2, 3, 4,5,6], label = 'banda V')\n",
-        "ax[0].hist(mB, bins=[0, 1, 2, 3, 4,5,6],alpha = 0.7,label = 'banda B')\n",
-        "ax[0].set_title('Distribucion bandas B y V')\n",
-        "ax[0].set_xlabel('Magnitud aparente')\n",
-        "ax[0].set_ylabel('Numero de estrellas')\n",
-        "ax[0].legend(loc = 'upper right')\n",
+        "fig, ax = plt.subplots(figsize = (15,5), ncols = 2) #Defino la cantidad de subgraficos\n",
+        "ax[0].hist(mV, bins=[0, 1, 2, 3, 4,5,6], label = 'banda V') #histograma de V\n",
+        "ax[0].hist(mB, bins=[0, 1, 2, 3, 4,5,6],alpha = 0.7,label = 'banda B') #histograma de B\n",
+        "ax[0].set_title('Distribucion bandas B y V') #titulo\n",
+        "ax[0].set_xlabel('Magnitud aparente') #eje x\n",
+        "ax[0].set_ylabel('Numero de estrellas') #eje y\n",
+        "ax[0].legend(loc = 'upper right') #leyenda\n",
         "\n",
-        "ax[1].hist(distc, bins=[0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5,6],color = 'red')\n",
+        "ax[1].hist(distc, bins=[0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5,6],color = 'red') \n",
         "ax[1].set_title('Distribucion distancias')\n",
         "ax[1].set_xlabel('Distancias (pc)')\n",
         "ax[1].set_ylabel('numero de estrellas ')\n",
         "ax[1].legend()\n",
+        "#los comentarios para los titutlos son los mismos.\n",
         "\n",
         "plt.tight_layout()\n"
       ],
@@ -196,6 +197,17 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "c5nI5n_K80v5",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## Resumen parte 2\n",
+        "En esta parte de la tarea creo 2 gráficos. El primero trata sobre la distribución de bandas B y V. Mientras que el segundo muestra las distancias. Podemos notar que en el caso de las distancias, la mayor concentración de población estelar se observa entre 2.5 y 3.5 pc."
       ]
     },
     {
@@ -227,9 +239,9 @@
       "source": [
         "#Filtrar por distancia\n",
         "\n",
-        "datos_filtrados = datos.copy()[distc < 3.3 ] #Viendo el histograma, pdemos observar que la gran mayoría tiene distancias cercanas a 3. Por ende solo tomo esos datos (con distancias menores que 3 pc).\n",
+        "datos_filtrados = datos.copy()[distc < 3.3 ] #Viendo el histograma, pdemos observar que la gran mayoría tiene distancias cercanas a 3. Por ende solo tomo esos datos (con distancias menores que 3.3 pc).\n",
         "\n",
-        "print(\"El set original contenia \"+str(len(distc))+' estrellas, luego de filtrar quedaron '+str(len(datos_filtrados[:,0]))+' estrellas.')"
+        "print(\"El set original contenia \"+str(len(distc))+' estrellas, luego de filtrar quedaron '+str(len(datos_filtrados[:,0]))+' estrellas.') #imprime lo pedido"
       ],
       "execution_count": 164,
       "outputs": [
@@ -240,6 +252,17 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "KdPV-8G59VtP",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## Resumen parte 3\n",
+        "Básicamente filtro los datos que me interesan -la población estelar cercana a los 3 pc de distancia hacia la tierra. Luego imprimo un mensaje observando cuantos datos \"sobrevivieron\" al  \"chasquido\" del filtro."
       ]
     },
     {
@@ -276,13 +299,13 @@
         "#Funcion mag_abs(mag, dist)\n",
         "\n",
         "def mag_abs(mag_ap, dist):\n",
-        "    return mag_ap - 5*np.log(dist)/np.log(10)+5\n",
+        "    return mag_ap - 5*np.log(dist)/np.log(10)+5 #Retorna la fórmula de M.\n",
         "    \n",
         "    \n",
         "  \n",
         "mag_ap = datos_filtrados[:,1] #Considere banda V.\n",
-        "dist = datos_filtrados[:,6]\n",
-        "mag_abs(mag_ap,dist)"
+        "dist = datos_filtrados[:,6] #las distancias de los datos filtrados.\n",
+        "mag_abs(mag_ap,dist) #Calcula la M abs."
       ],
       "execution_count": 165,
       "outputs": [
@@ -299,6 +322,17 @@
           },
           "execution_count": 165
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "KjXaM86T-AqE",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## Resumen parte 4\n",
+        "Simplemente se crea la función **magnitud absoluta**."
       ]
     },
     {
@@ -331,15 +365,15 @@
       "cell_type": "code",
       "source": [
         "#Crear arrays MV y color\n",
-        "MV = mag_abs(mag_ap,dist)\n",
-        "color = datos_filtrados[:,0]-mag_ap\n",
+        "MV = mag_abs(mag_ap,dist) #arreglo de la mag abs en V\n",
+        "color = datos_filtrados[:,0]-mag_ap #arreglo de los datos filtrados de la diferencia entre B y V\n",
         "\n",
         "#plot cmd\n",
-        "plt.plot(color, MV,'*',color = 'red')\n",
-        "plt.gca().invert_yaxis()\n",
-        "plt.ylabel('MV')\n",
-        "plt.xlabel('color (B-V)')\n",
-        "plt.title('Grafico MV vs color')\n"
+        "plt.plot(color, MV,'*',color = 'red') #gráfico\n",
+        "plt.gca().invert_yaxis() #invertir el orden del eje y\n",
+        "plt.ylabel('MV') #eje y\n",
+        "plt.xlabel('color (B-V)') #eje x\n",
+        "plt.title('Grafico MV vs color') #titulo\n"
       ],
       "execution_count": 174,
       "outputs": [
@@ -367,6 +401,17 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "JLOTqx-8-gOu",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## Resumen parte 5\n",
+        "A partir de los datos anteriores se crea el diagrama color magnitud. "
       ]
     },
     {
@@ -403,10 +448,10 @@
         "# plot cmd + masa / smd + temp\n",
         "\n",
         "%matplotlib inline\n",
-        "masa = datos_filtrados[:,5]\n",
-        "fig, ax = plt.subplots(figsize = (15,5), ncols = 2)\n",
+        "masa = datos_filtrados[:,5] #arreglo de masas\n",
+        "fig, ax = plt.subplots(figsize = (15,5), ncols = 2) \n",
         "uwu = ax[0].scatter(color, MV, label = 'Estrellas', c = masa, alpha = 0.5)\n",
-        "t = fig.colorbar(uwu,ax = ax[0])\n",
+        "t = fig.colorbar(uwu,ax = ax[0]) #barra de colores para el primer sub grafico\n",
         "ax[0].invert_yaxis()\n",
         "ax[0].set_title('Relacion MV-color')\n",
         "ax[0].set_xlabel('color(B-V)')\n",
@@ -416,7 +461,7 @@
         "\n",
         "logtemp = datos_filtrados[:,4]\n",
         "uwu2 = ax[1].scatter(color, MV, label = 'Estrellas', c = logtemp, alpha = 0.5)\n",
-        "u = fig.colorbar(uwu2,ax = ax[1])\n",
+        "u = fig.colorbar(uwu2,ax = ax[1]) #barra de colores para el segundo\n",
         "ax[1].invert_yaxis()\n",
         "ax[1].set_title('Relacion MV-color')\n",
         "ax[1].set_xlabel('color(B-V)')\n",
@@ -424,6 +469,7 @@
         "ax[1].legend(loc = 'upper right')\n",
         "u.ax.set_ylabel('Temperatura')\n",
         "\n",
+        "#Todo lo demás ya se describió xd.\n",
         "plt.tight_layout()"
       ],
       "execution_count": 229,
@@ -450,7 +496,7 @@
       },
       "cell_type": "code",
       "source": [
-        ""
+        "\n"
       ],
       "execution_count": 0,
       "outputs": []
